refactor: Allow `EventDispatcher` to work with all `EventObject` types